fix: status logo not showing correctly

--- a/src/assets/projects/roc/css/global.scss
+++ b/src/assets/projects/roc/css/global.scss
@@ -958,7 +958,7 @@ h1.title-last-operations {
     border-bottom: none;
 }
 .table-status-icon-cell {
-    width: 130px;
+    width: 145px;
 }
 
 /* Modal Queue info*/
